Fixed space on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -74,4 +74,9 @@
   {
     padding-top: 60px;
   }
+
+  .fig
+  {
+    margin-bottom: 50px;
+  }
 }
